Fixed: The little arrow is cut off for articles (bug#13815).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.TicketDetail.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.TicketDetail.css
@@ -270,7 +270,11 @@ div.Headline .Flag {
     -webkit-overflow-scrolling: touch;
    margin-left: 75px;
    position: relative;
-   overflow: auto;
+}
+
+#ArticleItems .ArticleHTML,
+#ArticleItems .ArticleBody {
+    overflow: auto;
 }
 
 #ArticleItems .Incoming .ArticleMailContentHTMLWrapper,
